<resources>
  <string name="app_name">AppCoins Wallet</string>
  <string name="title_send">Send</string>
  <string name="title_send_with_token">Send %s</string>
  <string name="title_request">Receive</string>
  <string name="title_import">Recover Wallet</string>
  <string name="bottom_navigation_my_wallets">My Wallets</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in_short">Create</string>
  <string name="prompt_to">To</string>
  <string name="action_send">Send</string>
  <string name="error_field_required">This field is required</string>
  <string name="action_settings">Settings</string>
  <string name="title_account_list">Wallets</string>
  <string name="cancel">Cancel</string>
  <string name="confirm_delete_account">Make sure that you have a backup of this wallet.</string>
  <string name="action_import">Recover</string>
  <string name="copy">Copy to clipboard</string>
  <string name="copied">Copied!</string>
  <string name="close">Close</string>
  <string name="title_activity_settings">Settings</string>
  <string name="network_label">Network</string>
  <string name="credits">Credits</string>
  <string name="label_new">New</string>
  <string name="got_it_button">Got it</string>
  <string name="change_button">Change</string>
  <string name="vip">VIP</string>
  <string name="faq">FAQs</string>
  <string name="about_us_title">About Us</string>
  <string name="preferences_title">Preferences</string>
  <string name="low_storage_error">Not enough storage space</string>
  <string name="no_camera_permission_title">Camera Permission</string>
  <string name="no_camera_permission">AppCoins BDS Wallet needs permission to access your camera to scan QR codes.</string>
  <string name="no_camera_available">No camera available!</string>
  <string name="ok">Ok</string>
  <string name="barcode_error_format">Invalid barcode format: %s</string>
  <string name="title_delete_account">Are you sure you want to remove this wallet?</string>
  <string name="twitter">Twitter</string>
  <string name="telegram">Telegram Group</string>
  <string name="title_community">Community</string>
  <string name="title_opensource">Open Source Development</string>
  <string name="title_source_code">Source Code</string>
  <string name="title_report_bug">Report a bug</string>
  <string name="title_support">Support</string>
  <string name="title_permissions">Permissions</string>
  <string name="permissions_title">Permissions</string>
  <string name="permissions_active_wallet_short">Current active wallet</string>
  <string name="error_import">Error importing keystore</string>
  <string name="message_this_is_your_address">My public Ethereum wallet address</string>
  <string name="backup_warning_text">Since only you control your money, you\'ll need to save a backup of your keystore in case this app is deleted.\n\nYour wallet is never saved to cloud storage or standard device backups.</string>
  <string name="backup_wallet_tooltip">Keep a copy of your wallet to keep it safe.</string>
  <string name="message_no_backup">No backup, no Ethereum</string>
  <string name="error_deleting_account">Error deleting wallet</string>
  <string name="title_privacy_policy">Privacy Policy</string>
  <string name="title_terms">Terms and Conditions</string>
  <string name="title_version">Version</string>
  <string name="title_tokens">My Tokens</string>
  <string name="unlock_screen_title_android">Unlock screen</string>
  <string name="unlock_screen_prompt_android">Please unlock your Android device to continue.</string>
  <string name="do_manage_make_backup">Did you successfully make a backup?</string>
  <string name="yes_continue">Yes, continue</string>
  <string name="yes_done_button">Yes, done</string>
  <string name="no_repeat">No, repeat</string>
  <string name="skip">Skip</string>
  <string name="skip_with_arrow">Skip &gt;</string>
  <string name="root_title">DEVICE SECURITY COMPROMISED</string>
  <string name="root_body">Any \'rooted\' app can access AppCoins Wallet\'s keychain data and steal your wallet! Wipe this wallet immediately and restore on a secure device.</string>
  <string name="credits_purchase_value">%s AppCoins Credits</string>
  <string name="buying">Buying %s</string>
  <string name="action_buy">Buy</string>
  <string name="empty"/>
  <string name="try_again">Try again</string>
  <string name="already_have_account">Already have a wallet?</string>
  <string name="action_create_new_account">Create new wallet</string>
  <string name="unknown_error">An error has occurred.</string>
  <string name="action_backup_wallet">Backup Wallet</string>
  <string name="no_tokens">You haven\'t added any custom token yet.</string>
  <string name="title_email">Email Us</string>
  <string name="action_donate">Donate</string>
  <string name="title_my_address">Receive</string>
  <string name="title_my_tokens">My Tokens</string>
  <string name="title_activity_send">Send</string>
  <string name="title_activity_confirmation">Confirm</string>
  <string name="title_add_token">Add Custom Token</string>
  <string name="title_airdrop">Airdrop</string>
  <string name="suggestion_private_key">Private key has to be 64 characters long</string>
  <string name="suggestion_empty_password_available">The password can be left blank.</string>
  <string name="suggestion_this_is_your_address">My public %s wallet address</string>
  <string name="hint_private_key_field">Private key *</string>
  <string name="hint_keystore">Keystore *</string>
  <string name="tab_keystore">Keystore</string>
  <string name="tab_private_key">Private key</string>
  <string name="title_dialog_error">Error</string>
  <string name="title_dialog_handling">Processing…</string>
  <string name="title_dialog_add_account">Add wallet</string>
  <string name="title_dialog_deposit">How would you like to buy?</string>
  <string name="title_dialog_close_channel">Close channel</string>
  <string name="dialog_message">Set a password to encrypt your wallet</string>
  <string name="toast_message_wallet_imported">The wallet was recovered</string>
  <string name="toast_message_wallet_exported">A backup was created</string>
  <string name="toast_qr_code_no_address">QR code doesn\'t contain a valid address</string>
  <string name="dialog_message_close_channel">Are you sure you want to close this µRaiden channel? </string>
  <string name="intro_title_first_page">AppCoins Wallet</string>
  <string name="intro_title_second_page"><![CDATA[Private & Secure]]></string>
  <string name="intro_title_third_page">Simple &amp; Easy</string>
  <string name="intro_message_first_page">Welcome to the revolution of the app economy.</string>
  <string name="intro_message_second_page">Private keys never leave your device.</string>
  <string name="intro_message_third_page">Process all your in-app payments and rewards in AppCoins.</string>
  <string name="intro_1_title">AppCoins Wallet</string>
  <string name="intro_1_body">Your app for in-app purchases.</string>
  <string name="intro_2_title">Play More, Pay Less</string>
  <string name="intro_2_body">The best payment wallet for apps and games.</string>
  <string name="intro_3_title">Simple and Easy</string>
  <string name="intro_3_body">Bonuses on all purchases.</string>
  <string name="intro_4_title">Secure and Private</string>
  <string name="intro_4_body">Use bank card, PayPal and your favorite payment methods.</string>
  <string name="intro_4_body_2">All your transactions are always safe thanks to the latest technology.</string>
  <string name="intro_5_title">Get Free AppCoins Credits!</string>
  <string name="intro_5_body">You\'ll earn free AppCoins Credits by trying apps and games.</string>
  <string name="intro_creating_wallet_short">Setting up your wallet for you&#8230;</string>
  <string name="intro_wallet_created_short">Wallet created!</string>
  <string name="intro_agree_terms_and_conditions_body">By entering the AppCoins Wallet, you agree to the %1$s and %2$s.</string>
  <string name="intro_skip_button">SKIP</string>
  <string name="intro_welcome_header">Welcome to the AppCoins Wallet</string>
  <string name="intro_welcome_body">Top up your wallet or make a purchase in any AppCoins compatible app or game.</string>
  <string name="intro_welcome_header_2">Up to %s%% Bonus!</string>
  <string name="intro_welcome_body_2">Bonuses can be used in any app or game.</string>
  <string name="intro_already_have_wallet_button">I already have a wallet</string>
  <string name="intro_get_started_button">Launch wallet</string>
  <string name="launching_wallet_body">Launching wallet&#8230;</string>
  <string name="select_method_title">Choose a payment method</string>
  <string name="bonus_body">Get %s bonus with this purchase.</string>
  <string name="agree_by_choosing_a_payment_method_body">By choosing a payment method, you agree to the %1$s and %2$s.</string>
  <string name="pay_with_card_title">Pay with credit/debit card</string>
  <string name="more_payment_methods_button">More payment methods</string>
  <string name="bonus_received_body">You received a %s bonus in your wallet.</string>
  <string name="back_to_the_game_button">Back to the game</string>
  <string name="other_payment_methos_title">Other payment methods:</string>
  <string name="label_from">From</string>
  <string name="label_to">To</string>
  <string name="label_gas_limit">Gas Limit</string>
  <string name="label_gas_price">Gas Price</string>
  <string name="label_network_fee">Network Fee</string>
  <string name="button_ok">OK</string>
  <string name="hint_recipient_address">Recipient Address</string>
  <string name="hint_amount">Amount</string>
  <string name="hint_amount_with_token">Amount %s</string>
  <string name="hint_contract_address">Contract address</string>
  <string name="hint_contract_symbol">Symbol</string>
  <string name="hint_contract_decimals">Decimals</string>
  <string name="button_cancel">CANCEL</string>
  <string name="button_yes">YES</string>
  <string name="subtitle_from">From</string>
  <string name="subtitle_gas_fee">Fee</string>
  <string name="subtitle_transaction_num">Transaction</string>
  <string name="action_more_details">More</string>
  <string name="action_add_wallet">Add wallet</string>
  <string name="action_coinbase">Coinbase</string>
  <string name="action_shapeshift">Shapeshift (Crypto only)</string>
  <string name="action_changelly">Changelly</string>
  <string name="action_wallets">Wallets</string>
  <string name="action_next">Next</string>
  <string name="action_edit">Edit</string>
  <string name="action_save">Save</string>
  <string name="error_fail_generate_qr">Could not generate QR code.</string>
  <string name="error_invalid_address">Invalid address</string>
  <string name="error_invalid_amount">Invalid amount</string>
  <string name="error_transaction_failed">Transaction error</string>
  <string name="scan_qr">Get address from QR Code</string>
  <string name="facebook">Facebook</string>
  <string name="proceed">proceed</string>
  <string name="iab_activity_raiden_channel_no_funds_message">You don\'t have enough funds on your µRainden payment channel. Go to your wallet and close the channel to create a new one.  Do you still want to complete this purchase with a standard payment?</string>
  <string name="iab_activity_raiden_channel_no_funds_title">Payment Channel Funds</string>
  <string name="balance_title">Balance</string>
  <string name="p2p_send_currency_eth" translatable="false">ETH</string>
  <string name="p2p_send_currency_appc" translatable="false">AppCoins</string>
  <string name="p2p_send_currency_appc_c" translatable="false">AppCoins Credits</string>
  <string name="settings_item_support">Contact Support Team</string>
  <string name="check_updates_settings_title">Check for Updates</string>
  <string name="subscriptions_settings_title">Manage subscriptions</string>
  <string name="fingerprint_settings">Fingerprint Lock</string>
  <string name="change_currency_settings_title">Currency</string>
</resources>