<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
  <item
      android:id="@+id/action_promotions"
      android:icon="@drawable/ic_promotions"
      android:title="Promotions"
      />
  <item
      android:id="@+id/action_send"
      android:icon="@drawable/ic_bottom_nav_send"
      android:title="@string/title_send"
      />
  <item
      android:id="@+id/action_my_address"
      android:icon="@drawable/ic_bottom_nav_receive"
      android:title="@string/title_request"
      />
  <item
      android:id="@+id/action_balance"
      android:icon="@drawable/ic_bottom_nav_tokens"
      android:title="@string/balance_title"
      />
</menu>
    <!-- !! overlay_bottom_navigation_menu used in OverlayFragment has direct relationship with
    this menu, if something is changed in this menu it should be changed on that menu too!! -->

