<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <include layout="@layout/layout_simple_toolbar"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="?actionBarSize"
      android:orientation="vertical"
      android:padding="16dp"
      >
    <RelativeLayout
        android:id="@+id/send_to_address_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:orientation="horizontal"
        >
      <android.support.design.widget.TextInputLayout
          android:id="@+id/to_input_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <EditText
            android:id="@+id/send_to_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_recipient_address"
            android:imeActionLabel="@string/prompt_to"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:paddingEnd="@dimen/large_margin"
            android:paddingRight="@dimen/large_margin"
            />
      </android.support.design.widget.TextInputLayout>
      <ImageButton
          android:id="@+id/scan_barcode_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:background="?android:selectableItemBackground"
          android:contentDescription="@string/scan_qr"
          android:padding="@dimen/big_padding"
          android:src="@mipmap/qr_code_icon"
          />
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/amount_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        >
      <EditText
          android:id="@+id/send_amount"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/hint_amount"
          android:imeActionLabel="@string/action_sign_in_short"
          android:imeOptions="actionUnspecified"
          android:inputType="numberDecimal"
          android:maxLines="1"
          />
    </android.support.design.widget.TextInputLayout>
  </LinearLayout>
</FrameLayout>
