<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:minHeight="152dp"
    android:padding="16dp"
    >

  <TextView
      android:id="@+id/title"
      style="@style/DialogTitleStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_dialog_close_channel"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />
  <TextView
      android:id="@+id/text"
      style="@style/DialogTextStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/normal_margin"
      android:text="@string/dialog_message_close_channel"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/title"
      />

  <Button
      android:id="@+id/positive_button"
      style="@style/ButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="@dimen/button_height"
      android:layout_marginTop="32dp"
      android:paddingStart="@dimen/half_large_margin"
      android:paddingEnd="@dimen/half_large_margin"
      android:text="@string/button_yes"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/text"
      />

  <Button
      android:id="@+id/negative_button"
      style="@style/CancelBorderlessButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="@dimen/button_height"
      android:layout_marginEnd="@dimen/big_margin"
      android:text="@string/button_cancel"
      android:textColor="@color/grey_alpha_active_54"
      app:layout_constraintEnd_toStartOf="@id/positive_button"
      app:layout_constraintTop_toTopOf="@id/positive_button"
      />
</androidx.constraintlayout.widget.ConstraintLayout>
