<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/big_margin"
      android:orientation="vertical"
      >
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        >
      <EditText
          android:id="@+id/keystore"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="top"
          android:hint="@string/hint_keystore"
          android:imeActionLabel="@string/action_sign_in_short"
          android:imeOptions="actionUnspecified"
          android:inputType="textMultiLine"
          android:minLines="3"
          />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="false"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:passwordToggleEnabled="true"
        >
      <EditText
          android:id="@+id/password"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/prompt_password"
          android:imeActionLabel="@string/action_sign_in_short"
          android:imeOptions="actionDone"
          android:inputType="textPassword"
          android:maxLines="1"
          android:singleLine="true"
          />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/import_action"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/big_margin"
        android:text="@string/action_import"
        style="@style/ButtonStyle"
        />
  </LinearLayout>
</ScrollView>