<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background"
    android:padding="16dp"
    >
  <TextView
      android:id="@+id/iab_activity_raiden_channel_no_funds"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/iab_activity_raiden_channel_no_funds_title"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      style="@style/Base.TextAppearance.AppCompat.Headline"
      />
  <TextView
      android:id="@+id/iab_activity_raiden_channel_no_funds_message"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/iab_activity_raiden_channel_no_funds_message"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/iab_activity_raiden_channel_no_funds"
      style="@style/Base.TextAppearance.AppCompat.Body1"
      />

  <Button
      android:id="@+id/iab_activity_raiden_no_funds_ok_button"
      android:layout_width="wrap_content"
      android:layout_height="32dp"
      android:layout_marginTop="32dp"
      android:text="@string/proceed"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/iab_activity_raiden_channel_no_funds_message"
      style="@style/ButtonStyle"
      />

  <TextView
      android:id="@+id/iab_activity_raiden_no_funds_cancel_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:layout_marginStart="16dp"
      android:text="@string/cancel"
      android:textAllCaps="true"
      app:layout_constraintBottom_toBottomOf="@+id/iab_activity_raiden_no_funds_ok_button"
      app:layout_constraintEnd_toStartOf="@id/iab_activity_raiden_no_funds_ok_button"
      app:layout_constraintTop_toTopOf="@+id/iab_activity_raiden_no_funds_ok_button"
      />

</android.support.constraint.ConstraintLayout>