<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/currency_selector"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/half_large_margin"
    android:layout_marginTop="24dp"
    android:orientation="horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/transact_fragment_amount_layout"
    tools:showIn="@layout/transact_fragment_layout"
    >
  <com.google.android.material.radiobutton.MaterialRadioButton
      android:id="@+id/appcoins_credits_radio_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/big_margin"
      android:checked="true"
      android:text="@string/p2p_send_currency_appc_c"
      />
  <com.google.android.material.radiobutton.MaterialRadioButton
      android:id="@+id/appcoins_radio_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="@dimen/big_margin"
      android:text="@string/p2p_send_currency_appc"
      />
  <com.google.android.material.radiobutton.MaterialRadioButton
      android:id="@+id/ethereum_credits_radio_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/p2p_send_currency_eth"
      />
</RadioGroup>